<resources>
    <string name="app_name">Bookshelf</string>
    <string name="dummy_productname">Dummy Product</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_author">Dummy Author</string>
    <string name="dummy_supplierName">Dummy Supplier Name</string>
    <string name="dummy_supplierPhoneNumber">00 00 00 00</string>
    <string name="insert_success">Saved with id:  </string>
    <string name="insert_failure">Error in saving</string>
    <string name="insert_success_user">Product saved</string>
    <string name="update_failure">Error in updating</string>
    <string name="update_success">Product updated</string>
    <string name="not_a_book">Not a book</string>
    <string name="is_a_book">Is a book</string>
    <string name="empty_view_subtitle_text">Try to add new products clicking on the + button below.\n
        You will be asked:\n
        - product name\n
        - product quantity in the shelves\n
        - product price\n
        - supplier name\n
        - supplier phone number.\n
        All fields are mandatory.</string>
    <string name="empty_view_title_text">A bit lonely, here...</string>
    <string name="button_sale">Sale</string>
    <string name="button_save_item">Save item</string>
    <string name="button_delete_item">Delete item</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="menu_action_delete_all_entries">Delete all products</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes. Do you wish to go back?</string>
    <string name="discard">Yes, discard</string>
    <string name="keep_editing">No, keep editing</string>
    <string name="delete_product_failed">Error in deleting</string>
    <string name="delete_product_success">Product(s) deleted</string>
    <string name="button_increase_quantity">+</string>
    <string name="button_decrease_quantity">-</string>
    <string name="button_order">Order</string>
    <string name="button_edit"><u>Edit</u></string>
    <string name="label_price">Price:</string>
    <string name="label_editText_price">Insert price</string>
    <string name="label_quantity">Quantity left:</string>
    <string name="label_editText_quantity">Insert quantity</string>
    <string name="label_cat_productInfo">Product Info</string>
    <string name="label_cat_supplierInfo">Supplier Info</string>
    <string name="label_supplierName">Supplier Name:</string>
    <string name="label_supplierPhoneNumber">Supplier Phone Number:</string>
    <string name="label_editext_supplierName">Insert supplier name</string>
    <string name="label_editext_supplierPhoneNumber">Insert supplier phone number</string>
    <string name="label_productName">Product Name:</string>
    <string name="label_editText_productName">Insert product name</string>
    <string name="editor_activity_title_new_product">Add new product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="editor_activity_title_details_product">See product details</string>
    <string name="toast_quantity_zero">There are no more products of this kind.\n Please order it back and update the quantity.</string>
    <string name="toast_update_failed">Error in sale</string>
    <string name="toast_update_success">Sale successful</string>
    <string name="editor_toast_decrease_success">Quantity decreased</string>
    <string name="editor_toast_increase_success">Quantity increased</string>
    <string name="editor_empty_productName">Please insert a product name</string>
    <string name="editor_empty_price">Please insert a price</string>
    <string name="editor_empty_quantity">Please insert a quantity</string>
    <string name="editor_empty_supplierName">Please insert a supplier name</string>
    <string name="editor_empty_supplierPhone">Please insert a supplier phone number</string>
</resources>
