<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/activity_margin"
    tools:context="eu.escapeadvisor.bookshelf.EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/category_title"
            style="@style/CategoryTitle"
            android:text="@string/label_cat_productInfo" />

        <LinearLayout
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_title"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelEditText"
                android:text="@string/label_productName" />

            <EditText
                style="@style/EditText"
                android:hint="@string/label_editText_productName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelEditText"
                android:text="@string/label_price" />

            <EditText
                style="@style/EditText"
                android:hint="@string/label_editText_price" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelEditText"
                android:text="@string/label_quantity" />

            <EditText
                style="@style/EditText"
                android:hint="@string/label_editText_quantity"
                android:inputType="number"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:orientation="horizontal">

            <Button
                style="@style/Buttons"
                android:layout_margin="@dimen/activity_margin"
                android:layout_width="@dimen/editor_buttons"
                android:layout_height="@dimen/editor_buttons"
                android:layout_alignParentLeft="true"
                android:text="@string/button_increase_quantity" />

            <Button
                style="@style/Buttons"
                android:layout_margin="@dimen/activity_margin"
                android:layout_width="@dimen/editor_buttons"
                android:layout_height="@dimen/editor_buttons"
                android:layout_alignParentRight="true"
                android:text="@string/button_decrease_quantity" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>