<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:id="@+id/summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            style="@style/ListItemMain"
            tools:text="Name of the product" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/tv_margin"
                android:fontFamily="sans-serif"
                android:text="@string/label_price"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD" />

            <TextView
                android:id="@+id/price"
                style="@style/ListItemSecondary"
                tools:text="1111.11" />

            <TextView
                android:id="@+id/label_quantity"
                style="@style/ListItemSecondary"
                android:text="@string/label_quantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/ListItemSecondary"
                tools:text="9999" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_margin"
            android:background="@color/colorAccent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/button_sale" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/button_edit" />
    </LinearLayout>
</LinearLayout>
